--- a/.gitignore
+++ b/.gitignore
@@ -2,14 +2,14 @@
 # If you are not using git, you can delete this file. For more information see: https://git-scm.com/docs/gitignore
 # For useful gitignore templates see: https://github.com/github/gitignore
 
-# Salesforce dev
-c/Users/standish/DevTechsStacksAll/Salesforce_Apex/dreamhouse-lwc
+# Salesforce cache
 .sf/
 .sfdx/
 .localdevserver/
+deploy-options.json
 
 # LWC VSCode autocomplete
-jsconfig.json
+**/lwc/jsconfig.json
 
 # LWC Jest coverage reports
 coverage/
@@ -36,6 +36,10 @@ ehthumbs.db
 [Dd]esktop.ini
 $RECYCLE.BIN/
 
-# VS Code project settings
-.vscode/*
-!.vscode/extensions.json
+# Local environment variables
+.env
+
+# Python Salesforce Functions
+**/__pycache__/
+**/.venv/
+**/venv/
